[package]
name = "bevy_assets_tar_zstd"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Fionn Langhans <fionn.langhans@gmail.com>" ]
repository = "https://github.com/codefionn/bevy_assets_tar_zstd"
description = "Asset loader using .tar.zstd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bevy = "0.9.0"
tar = "0.4.38"
zstd = "0"
